--- a/package.json
+++ b/package.json
@@ -188,26 +188,29 @@
     "cross-env": "3.1.3",
     "express": "4.14.0",
     "fontfaceobserver": "2.0.5",
+    "google-map-react": "^0.22.0",
     "immutable": "3.8.1",
     "intl": "1.2.5",
     "invariant": "2.2.1",
     "ip": "1.1.3",
     "lodash": "4.16.4",
+    "material-ui": "^0.16.5",
     "minimist": "1.2.0",
-    "react": "15.3.2",
-    "react-dom": "15.3.2",
+    "react": "15.4.1",
+    "react-dom": "15.4.1",
     "react-helmet": "3.1.0",
     "react-intl": "2.1.5",
+    "react-pure-render": "^1.0.2",
     "react-redux": "4.4.5",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.6",
     "react-router-scroll": "0.3.3",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "3.6.0",
     "redux-immutable": "3.0.8",
     "redux-saga": "0.12.0",
     "reselect": "2.5.4",
     "sanitize.css": "4.1.0",
-    "styled-components": "1.0.3",
     "warning": "3.0.0",
     "whatwg-fetch": "1.0.0"
   },
@@ -230,7 +233,7 @@
     "chai-enzyme": "0.5.2",
     "cheerio": "0.22.0",
     "coveralls": "2.11.14",
-    "css-loader": "0.25.0",
+    "css-loader": "^0.25.0",
     "enzyme": "2.5.1",
     "eslint": "3.9.0",
     "eslint-config-airbnb": "12.0.0",
@@ -244,6 +247,7 @@
     "expect": "1.20.2",
     "expect-jsx": "2.6.0",
     "exports-loader": "0.6.3",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "0.9.0",
     "html-loader": "0.4.4",
     "html-webpack-plugin": "2.24.0",
@@ -257,22 +261,25 @@
     "karma-ie-launcher": "1.0.0",
     "karma-mocha": "1.2.0",
     "karma-mocha-reporter": "2.2.0",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-safari-launcher": "1.0.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.8.0",
     "lint-staged": "3.2.0",
     "mocha": "3.1.2",
     "ngrok": "2.2.3",
+    "node-sass": "^4.1.0",
     "null-loader": "0.1.1",
     "offline-plugin": "3.4.2",
     "plop": "1.5.0",
     "pre-commit": "1.1.3",
     "psi": "2.0.4",
-    "react-addons-test-utils": "15.3.2",
+    "react-addons-test-utils": "^15.4.1",
     "rimraf": "2.5.4",
+    "sass-loader": "^4.1.0",
     "shelljs": "0.7.5",
     "sinon": "2.0.0-pre",
-    "style-loader": "0.13.1",
+    "style-loader": "^0.13.1",
     "url-loader": "0.5.7",
     "webpack": "2.1.0-beta.25",
     "webpack-dev-middleware": "1.8.4",
